# FreeCAD

./: .gitignore  AGENTS.md  pixi.toml
.github/workflows/: sub_buildPixi.yml  sub_buildUbuntu.yml
docs/: freecad-issues-to-consider.md  freecad-performance-implementation-plan.md  freecad-profiling-findings.md  jetbrains-style-compact-ui.md  python-console-standalone-window.md  ui-rails-for-panels.md
docs/checklists/: contribution-overview.md
docs/design/: jetbrains-style-compact-ui.md  python-console-standalone-window.md
docs/reference/: freecad-issues-to-consider.md
docs/templates/: README.md  adr.md  api-contract-guide.md  architecture-overview.md  checklist.md  document-lifecycle.md  generic.md  getting-started-guide.md  history-note.md  integration-guide.md  reference.md  requirements.md  runbook.md  technical-design.md
src/App/: Application.cpp  Application.h  Document.cpp  DocumentObject.h  ElementMap.cpp  PropertyFile.cpp  PropertyPythonObject.cpp
src/Base/: Builder3D.cpp  CMakeLists.txt  Writer.cpp
src/Gui/: ActionFunction.h  Application.cpp  AsyncRecomputeFeedback.cpp  AsyncRecomputeFeedback.h  BitmapFactory.cpp  CMakeLists.txt  CommandDoc.cpp  CompactMainWindowChrome.cpp  CompactMainWindowChrome.h  CompactTitleBarStyle.cpp  CompactTitleBarStyle.h  CompactToolBarAlignmentController.cpp  CompactToolBarAlignmentController.h  CompactToolBarContainer.cpp  CompactToolBarContainer.h  Document.cpp  EarlySplash.cpp  EarlySplash.h  Tree.h  (+26 more)
tests/: CMakeLists.txt
tools/devcli/: README.md  pyproject.toml
tools/devcli/src/auriora_dev/: __init__.py  cli.py
(+74 files in other folders)
